fix layout overflow x

--- a/src/Components/Layout/AuthenticatedLayout/AuthenticatedLayout.scss
+++ b/src/Components/Layout/AuthenticatedLayout/AuthenticatedLayout.scss
@@ -11,4 +11,5 @@
     "sidenav main";
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
